--- a/public/templates/pages/profile.twig
+++ b/public/templates/pages/profile.twig
@@ -35,7 +35,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-3 col-md-4 text-center">
                         <div class="profile-avatar-container border border-3 border-primary rounded shadow-lg p-1 mb-3">
-                            <img src="{{ user.avatar_url|default('/assets/images/default-avatar.jpg') }}" 
+                            <img src="{{ user.avatar_url|default('/assets/users/default-avatar.png') }}" 
                                  alt="Avatar de {{ user.username }}" 
                                  class="profile-avatar img-fluid animate__animated animate__pulse animate__slow">
                         </div>
@@ -266,14 +266,14 @@
                                         </div>
                                         <div class="card-body">
                                             <p class="text-danger">Las siguientes acciones son irreversibles. Procede con precaución.</p>
-                                            <div class="d-flex flex-wrap gap-2 mb-3">
+                                            <div class="d-flex flex-column gap-3">
                                                 <button id="exportData" class="btn btn-warning">
                                                     <i class="fas fa-file-export me-1"></i> Exportar mis datos
                                                 </button>
+                                                <button id="deleteAccount" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">
+                                                    <i class="fas fa-user-slash me-1"></i> Eliminar mi cuenta
+                                                </button>
                                             </div>
-                                            <button id="deleteAccount" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#deleteAccountModal">
-                                                <i class="fas fa-user-slash me-1"></i> Eliminar mi cuenta
-                                            </button>
                                         </div>
                                     </div>
                                 </div>
