add all endpoints

--- a/public/templates/pages/api/api_docs.twig
+++ b/public/templates/pages/api/api_docs.twig
@@ -371,10 +371,54 @@
         <template id="template-fungi-get-all">
             {% include 'pages/api/endpoints/fungi-get-all.twig' %}
         </template>
+        
         <template id="template-fungi-get-id">
             {% include 'pages/api/endpoints/fungi-get-id.twig' %}
         </template>
-        <!-- Incluir otros endpoints aquí como templates ocultos -->
+        
+        <template id="template-fungi-get-paginated">
+            {% include 'pages/api/endpoints/fungi-get-paginated.twig' %}
+        </template>
+        
+        <template id="template-fungi-get-random">
+            {% include 'pages/api/endpoints/fungi-get-random.twig' %}
+        </template>
+        
+        <template id="template-fungi-search">
+            {% include 'pages/api/endpoints/fungi-search.twig' %}
+        </template>
+        
+        <template id="template-fungi-post">
+            {% include 'pages/api/endpoints/fungi-post.twig' %}
+        </template>
+        
+        <template id="template-fungi-put">
+            {% include 'pages/api/endpoints/fungi-put.twig' %}
+        </template>
+        
+        <template id="template-fungi-delete">
+            {% include 'pages/api/endpoints/fungi-delete.twig' %}
+        </template>
+        
+        <template id="template-users-get-all">
+            {% include 'pages/api/endpoints/users-get-all.twig' %}
+        </template>
+        
+        <template id="template-users-post">
+            {% include 'pages/api/endpoints/users-post.twig' %}
+        </template>
+        
+        <template id="template-auth-login">
+            {% include 'pages/api/endpoints/auth-login.twig' %}
+        </template>
+        
+        <template id="template-auth-logout">
+            {% include 'pages/api/endpoints/auth-logout.twig' %}
+        </template>
+        
+        <template id="template-auth-verify">
+            {% include 'pages/api/endpoints/auth-verify.twig' %}
+        </template>
     </div>
     
     <!-- Script de carga optimizada -->
